--- a/style.css
+++ b/style.css
@@ -12,11 +12,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.container {
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
-}
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -24,13 +19,64 @@ body {
 }
 [class*="col-"] {
   width: 100%;
+  height: 400px;
+  border: 2px dotted blue;
 }
-@media screen and (min-width: 1200px) {
+.container {
+  background-color: red;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+  border: 4px double black;
+}
+@media screen and (min-width: 640px) {
   .container {
+    background-color: blue;
     max-width: 1140px;
   }
-  @media screen and (min-width: 1200px) {
+
+  .col-m-1 {
+    width: 8.33%;
   }
+  .col-m-2 {
+    width: 16.66%;
+  }
+  .col-m-3 {
+    width: 25%;
+  }
+  .col-m-4 {
+    width: 33.33%;
+  }
+  .col-m-5 {
+    width: 41.66%;
+  }
+  .col-m-6 {
+    width: 50%;
+  }
+  .col-m-7 {
+    width: 58.33%;
+  }
+  .col-m-8 {
+    width: 66.66%;
+  }
+  .col-m-9 {
+    width: 75%;
+  }
+  .col-m-10 {
+    width: 83.33%;
+  }
+  .col-m-11 {
+    width: 91.66%;
+  }
+  .col-m-12 {
+    width: 100%;
+  }
+@media screen and (min-width: 1200px) {
+  .container {
+    background-color: rgb(22, 167, 22);
+    max-width: 1140px;
+  }
+
   .col-1 {
     width: 8.33%;
   }
@@ -67,118 +113,4 @@ body {
   .col-12 {
     width: 100%;
   }
-}
-.justify-between {
-  justify-content: space-between;
-}
-.align-center {
-  align-items: center;
-}
-
-.none {
-  display: none;
-}
-.block {
-  display: block;
-}
-.show {
-  width: 246px;
-}
-.overlay {
-  background-color: rgb(0, 0, 0, 0.3);
-  z-index: 9999;
-}
-.focus {
-  background-color: rgba(255, 255, 255, 0.63);
-}
-@media screen and (min-width: 1200px) {
-  .overlay {
-    background-color: white;
-  }
-  .show {
-    width: auto;
-  }
-}
-/*? start Header  */
-header {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px;
-}
-header span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 25px;
-  width: 25px;
-  font-size: 20px;
-  border-radius: 3px;
-  cursor: pointer;
-  z-index: 999;
-}
-@media screen and (min-width: 1200px) {
-  header span {
-    display: none;
-  }
-}
-header span:hover {
-  background-color: rgba(255, 255, 255, 0.952);
-}
-header nav {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.664);
-  min-height: 99.9vh;
-  top: 0;
-  left: 0;
-  width: 0;
-  padding-top: 50px;
-  overflow: hidden;
-  transition: width 0.4s;
-}
-@media screen and (min-width: 1200px) {
-  header nav {
-    position: static;
-    background-color: transparent;
-    min-height: auto;
-    width: auto;
-    padding-top: 0;
-  }
-}
-nav ul li a {
-  width: 100%;
-  display: inline-block;
-  padding: 15px;
-  color: rgba(245, 245, 245, 0.829);
-  transition: color 0.3s;
-}
-@media screen and (min-width: 1200px) {
-  nav ul li {
-    display: inline-block;
-  }
-  nav ul li a {
-    display: inline-block;
-    padding: 0 15px;
-    color: black;
-  }
-}
-nav ul li:hover a {
-  color: dodgerblue;
-}
-/*! ========================== Banner Section*/
-.banner {
-  background: url(./Images/xhero-img.png.pagespeed.ic.INRfo5JT2o.webp) no-repeat
-    top center/cover;
-  background-color: #f9f9ff;
-  height: 750px;
-  z-index: 0;
-}
-.banner h1 {
-  font-size: 25px;
-  color: red;
-}
-.banner p {
-  font-size: 80px;
-  color: blue;
 }
