--- a/style.css
+++ b/style.css
@@ -16,25 +16,37 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -15px;
+  row-gap: 10px;
 }
 [class*="col-"] {
   width: 100%;
-  height: 400px;
+  /* height: 400px; */
   border: 2px dotted blue;
 }
+.row div:nth-child(odd) {
+  background-color: orangered;
+}
+.row div:nth-child(even) {
+  background-color: dodgerblue;
+}
+.row > div {
+  margin: 10px;
+}
 .container {
-  background-color: red;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
   border: 4px double black;
 }
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 576px) {
   .container {
-    background-color: blue;
-    max-width: 1140px;
+    max-width: 544px;
   }
-
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
   .col-m-1 {
     width: 8.33%;
   }
@@ -71,12 +83,16 @@ body {
   .col-m-12 {
     width: 100%;
   }
+}
+@media screen and (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .container {
-    background-color: rgb(22, 167, 22);
     max-width: 1140px;
   }
-
   .col-1 {
     width: 8.33%;
   }
@@ -113,4 +129,12 @@ body {
   .col-12 {
     width: 100%;
   }
+}
+img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+.justify-center {
+  justify-content: center;
 }
